docs(deploy-preview): Re-enable deploy previews for the doc
This re-enable deploy-previews through Netlify. It will check if
changes where made to the ./docs folder and build + deploy the preview
if so. Otherwise, it will deploy a dummy preview.

This also removes the netlify script to deploy in production whenever
we push to master, as this is now handled by Travis.

--- a/netlify.toml
+++ b/netlify.toml
@@ -5,13 +5,7 @@
   NODE_ENV = "development"
   YARN_VERSION = "1.9.4"
 
-# Deploy documentation website on each commit on master
-[context.master]
-  command = "./docs/scripts/netlify-master"
-
 # Deploy previews on each PR
-# Disabled for security reasons. Should be enabled back when main deploy is
-# moved to Travis
-# [context.deploy-preview]
-#   command = "./docs/scripts/netlify-deploy-preview"
-#   publish = "docs/dist"
+[context.deploy-preview]
+  command = "./scripts/netlify/deploy-preview"
+  publish = "docs/dist"
