--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,5 @@
 {
-  "overrides": [
-    {
-      "files": "*.scss",
-      "options": {
-        "singleQuote": true
-      }
-    }
-  ]
+  "proseWrap": "never",
+  "singleQuote": true,
+  "trailingComma": "es5"
 }
