--- a/packages/docsearch-core/package.json
+++ b/packages/docsearch-core/package.json
@@ -21,10 +21,10 @@
   "sideEffects": false,
   "scripts": {
     "build:umd": "rollup --config",
-    "build:es": "babel src --root-mode upward --extensions '.js,.ts,.tsx' --out-dir dist/es --quiet",
+    "build:es": "babel src --root-mode upward --extensions '.js,.ts,.tsx' --ignore '**/*/*.test.ts' --out-dir dist/es --quiet",
     "build:types": "tsc --emitDeclarationOnly --outDir dist/",
     "build": "yarn build:umd && yarn build:es",
-    "watch": "babel src --root-mode upward --extensions '.js,.ts,.tsx' --out-dir dist/es --quiet --watch"
+    "watch": "babel src --root-mode upward --extensions '.js,.ts,.tsx' --ignore '**/*/*.test.ts' --out-dir dist/es --quiet --watch"
   },
   "dependencies": {
     "algoliasearch": "^3.33.0"
