--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-jest": "22.7.1",
     "eslint-plugin-prettier": "3.1.0",
     "jest": "24.8.0",
+    "jest-watch-typeahead": "0.3.1",
     "lerna": "3.15.0",
     "prettier": "1.18.2",
     "rollup": "1.16.4",
