--- a/packages/docsearch/package.json
+++ b/packages/docsearch/package.json
@@ -23,7 +23,8 @@
     "build:es": "babel src --root-mode upward --extensions '.js,.ts,.tsx' --ignore '**/*/*.test.*' --out-dir dist/es --quiet",
     "build:types": "tsc --emitDeclarationOnly --outDir dist/",
     "build": "yarn build:umd && yarn build:es",
-    "watch": "babel src --root-mode upward --extensions '.js,.ts,.tsx' --ignore '**/*/*.test.*' --out-dir dist/es --quiet --watch"
+    "watch": "babel src --root-mode upward --extensions '.js,.ts,.tsx' --ignore '**/*/*.test.*' --out-dir dist/es --quiet --watch",
+    "type-check": "tsc"
   },
   "dependencies": {
     "docsearch.js-core": "^3.0.0"
