--- a/packages/docsearch-core/package.json
+++ b/packages/docsearch-core/package.json
@@ -22,9 +22,10 @@
   "scripts": {
     "build:umd": "rollup --config",
     "build:es": "babel src --root-mode upward --extensions '.js,.ts,.tsx' --ignore '**/*/*.test.ts' --out-dir dist/es --quiet",
-    "build:types": "tsc --emitDeclarationOnly --outDir dist/",
+    "build:types": "tsc --emitDeclarationOnly --outDir dist/es",
     "build": "yarn build:umd && yarn build:es",
-    "watch": "babel src --root-mode upward --extensions '.js,.ts,.tsx' --ignore '**/*/*.test.ts' --out-dir dist/es --quiet --watch"
+    "watch": "babel src --root-mode upward --extensions '.js,.ts,.tsx' --ignore '**/*/*.test.ts' --out-dir dist/es --quiet --watch",
+    "type-check": "tsc"
   },
   "dependencies": {
     "algoliasearch": "^3.33.0"
