--- a/packages/docsearch/package.json
+++ b/packages/docsearch/package.json
@@ -27,6 +27,8 @@
     "type-check": "tsc"
   },
   "dependencies": {
-    "docsearch.js-core": "^3.0.0"
+    "docsearch.js-core": "^3.0.0",
+    "downshift": "^3.2.10",
+    "preact": "^8.4.2"
   }
 }
