--- a/examples/react/package.json
+++ b/examples/react/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "docsearch.js": "3.0.0",
+    "docsearch.js-types": "^3.0.0",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-scripts": "3.0.1"
