--- a/packages/docsearch-autocomplete/package.json
+++ b/packages/docsearch-autocomplete/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "autocomplete.js": "^0.36.0",
-    "docsearch.js-core": "^3.0.0"
+    "docsearch.js-core": "^3.0.0",
+    "docsearch.js-types": "^3.0.0"
   }
 }
