--- a/examples/vanilla/package.json
+++ b/examples/vanilla/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "autocomplete.js": "0.36.0",
     "docsearch.js": "3.0.0",
-    "docsearch.js-types": "^3.0.0",
+    "docsearch-theme-light": "3.0.0",
     "parcel-bundler": "1.12.3"
   }
 }
