--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
     "rollup-plugin-babel": "4.3.3",
     "rollup-plugin-commonjs": "10.0.1",
     "rollup-plugin-filesize": "6.1.1",
+    "rollup-plugin-license": "0.9.0",
     "rollup-plugin-node-resolve": "5.2.0",
-    "rollup-plugin-uglify": "6.0.2",
+    "rollup-plugin-replace": "2.2.0",
+    "rollup-plugin-terser": "5.1.0",
     "typescript": "3.5.2"
   }
 }
