--- a/packages/docsearch-types/package.json
+++ b/packages/docsearch-types/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "docsearch.js-types",
+  "name": "docsearch-types",
   "version": "3.0.0",
   "license": "MIT",
   "homepage": "https://community.algolia.com/docsearch/",
