--- a/bundlesize.config.json
+++ b/bundlesize.config.json
@@ -2,15 +2,19 @@
   "files": [
     {
       "path": "packages/docsearch-core/dist/umd/index.js",
-      "maxSize": "12 kB"
+      "maxSize": "13 kB"
     },
     {
       "path": "packages/docsearch/dist/umd/index.js",
-      "maxSize": "30 kB"
+      "maxSize": "32 kB"
     },
     {
-      "path": "packages/docsearch-autocomplete/dist/umd/index.js",
-      "maxSize": "30 kB"
+      "path": "packages/docsearch-renderer-downshift/dist/umd/index.js",
+      "maxSize": "17 kB"
+    },
+    {
+      "path": "packages/docsearch-theme-light/dist/index.css",
+      "maxSize": "1 kB"
     }
   ]
 }
