--- a/examples/react/package.json
+++ b/examples/react/package.json
@@ -9,7 +9,7 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
-    "docsearch.js-core": "3.0.0",
+    "docsearch-core": "3.0.0",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-scripts": "3.0.1"
