--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-eslint": "10.0.2",
     "babel-jest": "24.8.0",
     "bundlesize": "0.18.0",
+    "cssnano": "4.1.10",
     "eslint": "6.0.1",
     "eslint-config-algolia": "13.4.0",
     "eslint-config-prettier": "6.0.0",
