--- a/packages/docsearch-renderer-downshift/package.json
+++ b/packages/docsearch-renderer-downshift/package.json
@@ -20,12 +20,12 @@
   "sideEffects": false,
   "scripts": {
     "build:umd": "rollup --config",
-    "build:es": "babel src --root-mode upward --extensions '.js,.ts,.tsx' --ignore '**/*/*.test.ts' --out-dir dist/es --quiet",
+    "build:es": "babel src --root-mode upward --extensions '.js,.ts,.tsx' --ignore '**/*/*.test.tsx' --out-dir dist/es --quiet",
     "build:prepare": "yarn run build:es",
-    "build:types": "tsc --emitDeclarationOnly --outDir dist/",
-    "build": "yarn run build:umd && yarn run build:es",
-    "watch": "babel src --root-mode upward --extensions '.js,.ts,.tsx' --ignore '**/*/*.test.ts' --out-dir dist/es --quiet --watch",
-    "type-check": "tsc"
+    "build:types": "tsc",
+    "build": "yarn run build:umd && yarn run build:es && yarn run build:types",
+    "watch": "babel src --root-mode upward --extensions '.js,.ts,.tsx' --ignore '**/*/*.test.tsx' --out-dir dist/es --quiet --watch",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "docsearch-core": "^3.0.0",
