--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,6 @@
     "target": "ESNEXT",
     "module": "es2015",
     "moduleResolution": "node",
-    "jsx": "preserve",
     "strict": true,
     "noImplicitAny": false,
     "noUnusedLocals": true,
@@ -11,6 +10,12 @@
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "allowSyntheticDefaultImports": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "skipLibCheck": true,
+    "jsx": "react",
+    "jsxFactory": "h",
+    "emitDeclarationOnly": true,
+    "declaration": true,
+    "declarationMap": true
   }
 }
