chore: add @babel/plugin-proposal-class-properties

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "type-check": "lerna run type-check"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "7.5.0",
     "@babel/plugin-transform-react-jsx": "7.3.0",
     "@babel/preset-env": "7.4.0",
     "@babel/preset-typescript": "7.3.3",
