--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@babel/plugin-transform-react-jsx": "7.3.0",
     "@babel/preset-env": "7.4.0",
     "@babel/preset-typescript": "7.3.3",
+    "@testing-library/jest-dom": "4.0.0",
+    "@testing-library/user-event": "4.1.0",
     "@types/jest": "^24.0.15",
     "@typescript-eslint/eslint-plugin": "1.11.0",
     "@typescript-eslint/parser": "1.11.0",
@@ -39,6 +41,7 @@
     "nodemon": "1.19.1",
     "postcss": "7.0.17",
     "postcss-css-variables": "0.13.0",
+    "preact-testing-library": "0.4.0",
     "prettier": "1.18.2",
     "rollup": "1.16.6",
     "rollup-plugin-babel": "4.3.3",
