chore: update TypeScript declaration config

--- a/packages/docsearch-core/tsconfig.json
+++ b/packages/docsearch-core/tsconfig.json
@@ -3,5 +3,5 @@
   "compilerOptions": {
     "declarationDir": "dist/es"
   },
-  "exclude": ["node_modules", "dist", "__fixtures__", "**/*.test.*"]
+  "exclude": ["node_modules", "dist", "**/*.test.*"]
 }
