--- a/packages/docsearch-core/package.json
+++ b/packages/docsearch-core/package.json
@@ -23,7 +23,7 @@
     "build:umd": "rollup --config",
     "build:es": "babel src --root-mode upward --extensions '.js,.ts,.tsx' --ignore '**/*/*.test.ts' --out-dir dist/es --quiet",
     "build:prepare": "yarn run build:es",
-    "build:types": "tsc",
+    "build:types": "tsc --emitDeclarationOnly",
     "build": "yarn run build:umd && yarn run build:es && yarn run build:types",
     "watch": "babel src --root-mode upward --extensions '.js,.ts,.tsx' --ignore '**/*/*.test.ts' --out-dir dist/es --quiet --watch",
     "type-check": "tsc --noEmit"
