--- a/packages/docsearch-core/tsconfig.json
+++ b/packages/docsearch-core/tsconfig.json
@@ -3,5 +3,11 @@
   "compilerOptions": {
     "declarationDir": "dist/es"
   },
-  "exclude": ["node_modules", "dist", "**/*.test.*"]
+  "exclude": [
+    "node_modules",
+    "dist",
+    "**/__tests__/**/*",
+    "**/__mocks__/**/*",
+    "**/__fixtures__/**/*"
+  ]
 }
