chore: update versions to 3.0.0-beta.0

--- a/examples/vanilla/package.json
+++ b/examples/vanilla/package.json
@@ -12,8 +12,8 @@
     "build": "parcel build index.html"
   },
   "dependencies": {
-    "docsearch-theme-light": "3.0.0",
-    "docsearch.js": "3.0.0",
+    "docsearch-theme-light": "3.0.0-beta.0",
+    "docsearch.js": "3.0.0-beta.0",
     "parcel-bundler": "1.12.3"
   }
 }
