--- a/packages/docsearch-core/package.json
+++ b/packages/docsearch-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "docsearch-core",
-  "version": "3.0.0",
+  "version": "3.0.0-beta.0",
   "license": "MIT",
   "homepage": "https://community.algolia.com/docsearch/",
   "repository": "algolia/docsearch",
@@ -30,7 +30,7 @@
   },
   "dependencies": {
     "algoliasearch": "^3.33.0",
-    "docsearch-types": "^3.0.0"
+    "docsearch-types": "^3.0.0-beta.0"
   },
   "devDependencies": {
     "@babel/cli": "7.4.4",
