--- a/packages/docsearch-types/package.json
+++ b/packages/docsearch-types/package.json
@@ -1,6 +1,6 @@
 {
   "name": "docsearch-types",
-  "version": "3.0.0",
+  "version": "3.0.0-beta.0",
   "license": "MIT",
   "homepage": "https://community.algolia.com/docsearch/",
   "repository": "algolia/docsearch",
