--- a/packages/docsearch/package.json
+++ b/packages/docsearch/package.json
@@ -1,6 +1,6 @@
 {
   "name": "docsearch.js",
-  "version": "3.0.0",
+  "version": "3.0.0-beta.0",
   "license": "MIT",
   "homepage": "https://community.algolia.com/docsearch/",
   "repository": "algolia/docsearch",
@@ -28,9 +28,9 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "docsearch-core": "^3.0.0",
-    "docsearch-renderer-downshift": "^3.0.0",
-    "docsearch-types": "^3.0.0",
+    "docsearch-core": "^3.0.0-beta.0",
+    "docsearch-renderer-downshift": "^3.0.0-beta.0",
+    "docsearch-types": "^3.0.0-beta.0",
     "preact": "^8.4.2"
   }
 }
