--- a/examples/vanilla/package.json
+++ b/examples/vanilla/package.json
@@ -12,8 +12,9 @@
     "build": "parcel build index.html"
   },
   "dependencies": {
-    "docsearch-theme-light": "3.0.0-beta.0",
+    "docsearch-theme-light": "3.0.0-beta.1",
     "docsearch.js": "3.0.0-beta.0",
-    "parcel-bundler": "1.12.3"
+    "parcel-bundler": "1.12.3",
+    "docsearch": "3.0.0-beta.1"
   }
 }
