chore(examples): update build command

--- a/examples/vanilla/package.json
+++ b/examples/vanilla/package.json
@@ -9,7 +9,7 @@
   ],
   "scripts": {
     "start": "parcel index.html",
-    "build": "parcel build index.html"
+    "build": "parcel build index.html --public-url ."
   },
   "dependencies": {
     "docsearch-theme-light": "3.0.0",
