--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "test": "jest",
     "test:size": "bundlesize",
     "lint": "eslint --ext .js,.ts,.tsx .",
-    "type-check": "lerna run type-check"
+    "type-check": "lerna run type-check",
+    "shipjs:prepare": "shipjs prepare",
+    "shipjs:release": "shipjs release"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "7.5.0",
@@ -51,6 +53,7 @@
     "rollup-plugin-node-resolve": "5.2.0",
     "rollup-plugin-replace": "2.2.0",
     "rollup-plugin-terser": "5.1.0",
+    "shipjs": "0.4.0",
     "typescript": "3.5.2"
   }
 }
