--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,8 @@
 {
-  "version": "3.0.0",
-  "packages": ["packages/*"],
+  "version": "3.0.0-beta.0",
+  "packages": [
+    "packages/*"
+  ],
   "npmClient": "yarn",
   "useWorkspaces": true
 }
