--- a/lerna.json
+++ b/lerna.json
@@ -1,8 +1,6 @@
 {
   "version": "3.0.0-beta.0",
-  "packages": [
-    "packages/*"
-  ],
+  "packages": ["packages/*"],
   "npmClient": "yarn",
   "useWorkspaces": true
 }
