--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "pretty-bytes-cli": "2.0.0",
     "semver": "6.3.0",
     "sinon": "7.4.1",
+    "tailwindcss": "^1.1.2",
     "uglify-js": "3.6.0",
     "webpack": "3.12.0",
     "webpack-cli": "3.3.7"
