chore: update shipjs command name

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,7 +67,7 @@ jobs:
       - save_cache: *save_yarn_cache
       - run:
           name: Try to Release
-          command: yarn shipjs:release
+          command: yarn release:trigger
   release_doc:
     <<: *defaults
     steps:
