--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "test:size": "bundlesize",
     "lint": "eslint --ext .js,.ts,.tsx .",
     "type-check": "lerna run type-check",
-    "shipjs:prepare": "shipjs prepare",
-    "shipjs:release": "shipjs release"
+    "release:prepare": "shipjs prepare",
+    "release:trigger": "shipjs trigger"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "7.5.0",
@@ -53,7 +53,7 @@
     "rollup-plugin-node-resolve": "5.2.0",
     "rollup-plugin-replace": "2.2.0",
     "rollup-plugin-terser": "5.1.0",
-    "shipjs": "0.4.0",
+    "shipjs": "0.5.1",
     "typescript": "3.5.2"
   }
 }
