--- a/packages/docsearch-renderer-downshift/package.json
+++ b/packages/docsearch-renderer-downshift/package.json
@@ -1,5 +1,6 @@
 {
   "name": "docsearch-renderer-downshift",
+  "description": "Downshift renderer for DocSearch",
   "version": "3.0.0-beta.0",
   "license": "MIT",
   "homepage": "https://community.algolia.com/docsearch/",
