--- a/packages/docsearch-theme-light/package.json
+++ b/packages/docsearch-theme-light/package.json
@@ -1,5 +1,6 @@
 {
   "name": "docsearch-theme-light",
+  "description": "Light theme for DocSearch",
   "version": "3.0.0-beta.0",
   "license": "MIT",
   "homepage": "https://community.algolia.com/docsearch/",
