--- a/packages/docsearch-types/package.json
+++ b/packages/docsearch-types/package.json
@@ -1,5 +1,6 @@
 {
   "name": "docsearch-types",
+  "description": "Types for creating DocSearch experiences",
   "version": "3.0.0-beta.0",
   "license": "MIT",
   "homepage": "https://community.algolia.com/docsearch/",
