--- a/packages/docsearch/package.json
+++ b/packages/docsearch/package.json
@@ -1,5 +1,6 @@
 {
   "name": "docsearch.js",
+  "description": "Autocomplete dropdown for your documentation",
   "version": "3.0.0-beta.0",
   "license": "MIT",
   "homepage": "https://community.algolia.com/docsearch/",
