--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@algolia/ui-library": "^1.0.0-beta.109",
     "@docusaurus/core": "^2.0.0-alpha.40",
-    "@docusaurus/preset-classic": "2.0.0-alpha.34",
+    "@docusaurus/preset-classic": "^2.0.0-alpha.40",
     "classnames": "^2.2.6",
     "file-loader": "^4.2.0",
     "image-webpack-loader": "^5.0.0",
