--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
       - run:
           name: Deploying to GitHub Pages
           command: |
-            git config --global user.email s-pace@users.noreply.github.com"
+            git config --global user.email "s-pace@users.noreply.github.com"
             git config --global user.name "s-pace"
             echo "machine github.com login s-pace password $GITHUB_TOKEN" > ~/.netrc
             cd website && yarn install && GIT_USER=s-pace yarn run publish-gh-pages
