--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
             git config --global user.email "s-pace@users.noreply.github.com"
             git config --global user.name "s-pace"
             echo "machine github.com login s-pace password $GITHUB_TOKEN" > ~/.netrc
-            cd website && yarn install && GIT_USER=s-pace yarn run publish-gh-pages
+            yarn install && GIT_USER=s-pace yarn run publish-gh-pages
 workflows:
   version: 2
   build_and_deploy:
