--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,8 +9,7 @@ version: 2
 jobs:
   deploy-website:
     docker:
-      # specify the version you desire here
-      - image: circleci/node:8.11.1
+      - image: circleci/node:latest-browsers-legacy
     steps:
       - checkout
       - run:
