--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
   "scripts": {
     "build": "yarn build:clean && yarn build:umd && yarn build:esm && yarn build:css",
     "": "// TODO: have a proper build:css, probably including autoprefixer?",
-    "build:css": "cp src/style.css dist/style.css",
-    "build:css:watch": "chokidar src/style.css --command \"yarn build:css\"",
+    "build:css": "cp src/styles/*.css dist/",
+    "build:css:watch": "chokidar src/styles/*.css --command \"yarn build:css\"",
     "build:esm": "babel src --root-mode upward --extensions '.ts,.tsx' --out-dir dist/esm",
     "build:esm:watch": "yarn build:esm --watch",
     "build:umd": "rollup --config",
