--- a/package.json
+++ b/package.json
@@ -16,10 +16,9 @@
   "unpkg": "dist/style.css",
   "jsdelivr": "dist/style.css",
   "scripts": {
-    "build": "yarn build:clean && yarn build:css",
-    "build:css": "mkdir dist && cp src/_variables.css dist/ && cp src/modal.css dist/ && cp src/button.css dist/ && cat src/*.css > dist/style.css",
-    "build:css:watch": "chokidar src/*.css --command \"yarn build:css\"",
+    "build": "yarn build:clean && mkdir dist && yarn build:css",
+    "build:css": "cp src/_variables.css dist/ && cp src/modal.css dist/ && cp src/button.css dist/ && cat src/*.css > dist/style.css",
     "build:clean": "rm -rf ./dist",
-    "watch": "concurrently \"yarn build:css:watch\""
+    "watch": "watch \"yarn build:css\" --ignoreDirectoryPattern \"/dist/\""
   }
 }
