--- a/package.json
+++ b/package.json
@@ -25,12 +25,11 @@
   "scripts": {
     "build": "yarn build:clean && yarn build:umd && yarn build:esm",
     "build:esm": "babel src --root-mode upward --extensions '.ts,.tsx' --out-dir dist/esm",
-    "build:esm:watch": "yarn build:esm --watch",
     "build:umd": "rollup --config",
     "build:types": "tsc -p ./tsconfig.declaration.json --outDir ./dist/esm",
-    "build:types:watch": "chokidar \"**/*.ts\" \"**/*.tsx\" --command \"yarn build:types\" --ignore \"dist\"",
     "build:clean": "rm -rf ./dist",
-    "watch": "concurrently \"yarn build:esm:watch\" \"yarn build:types:watch\""
+    "on:change": "concurrently \"yarn build:esm\" \"yarn build:types\"",
+    "watch": "watch \"yarn on:change\" --ignoreDirectoryPattern \"/dist/\""
   },
   "dependencies": {
     "@docsearch/css": "^1.0.0-alpha.23",
