--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "unpkg": "dist/umd/index.js",
   "jsdelivr": "dist/umd/index.js",
   "scripts": {
-    "build": "yarn build:clean && yarn build:umd && yarn build:esm",
+    "build": "yarn build:clean && yarn build:umd && yarn build:esm && yarn build:types",
     "build:esm": "babel src --root-mode upward --extensions '.ts,.tsx' --out-dir dist/esm",
     "build:umd": "rollup --config",
     "build:types": "tsc -p ./tsconfig.declaration.json --outDir ./dist/esm",
