--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@francoischalifour/autocomplete-monorepo",
+  "name": "@docsearch/monorepo",
   "private": true,
   "workspaces": [
     "packages/*"
@@ -12,12 +12,12 @@
     "lint": "eslint --ext .js,.ts,.tsx .",
     "storybook": "start-storybook --quiet --port 6006 --ci --static-dir .storybook/static",
     "storybook:build": "build-storybook --quiet --output-dir packages/website/build/stories --static-dir .storybook/static",
-    "build:clean": "lerna run build:clean --scope @francoischalifour/autocomplete-* --scope @docsearch/*",
-    "build:umd": "lerna run build:umd --scope @francoischalifour/autocomplete-* --scope @docsearch/*",
-    "build:esm": "lerna run build:esm --scope @francoischalifour/autocomplete-* --scope @docsearch/*",
-    "build:types": "lerna run build:types --scope @francoischalifour/autocomplete-* --scope @docsearch/*",
-    "build": "lerna run build --scope @francoischalifour/autocomplete-* --scope @docsearch/*",
-    "watch": "lerna run watch --parallel --scope @francoischalifour/autocomplete-* --scope @docsearch/*",
+    "build:clean": "lerna run build:clean --scope @docsearch/*",
+    "build:umd": "lerna run build:umd --scope @docsearch/*",
+    "build:esm": "lerna run build:esm --scope @docsearch/*",
+    "build:types": "lerna run build:types --scope @docsearch/*",
+    "build": "lerna run build --scope @docsearch/*",
+    "watch": "lerna run watch --parallel --scope @docsearch/*",
     "dev": "yarn build && yarn watch-and-storybook",
     "watch-and-storybook": "concurrently \"yarn run watch\" \"yarn run storybook\"",
     "type-check": "tsc --noEmit",
