chore(build): run only necessary builds on `prepare`

--- a/package.json
+++ b/package.json
@@ -5,28 +5,28 @@
     "packages/*"
   ],
   "scripts": {
-    "prepare": "yarn run build",
-    "start": "yarn run watch",
-    "watch": "lerna run watch --parallel --scope @docsearch/*",
-    "test": "jest",
-    "test:size": "bundlesize",
-    "lint": "eslint --ext .js,.ts,.tsx .",
-    "lint:css": "stylelint **/src/**/*.css",
     "build:clean": "lerna run build:clean --scope @docsearch/*",
-    "build:umd": "lerna run build:umd --scope @docsearch/*",
     "build:esm": "lerna run build:esm --scope @docsearch/*",
     "build:types": "lerna run build:types --scope @docsearch/*",
+    "build:umd": "lerna run build:umd --scope @docsearch/*",
     "build": "lerna run build --scope @docsearch/*",
-    "type-check": "tsc --noEmit",
-    "cy:verify": "cypress verify",
+    "cy:clean": "rm -rf cypress/screenshots",
     "cy:info": "cypress info",
     "cy:record": "percy exec -- cypress run --spec 'cypress/integration/**/*' --headless --record",
-    "cy:run": "start-server-and-test doc:test http://localhost:3000 cy:record",
     "cy:run:chrome": "yarn run cy:run --browser chrome",
-    "cy:run:firefox": "yarn run cy:run --browser firefox",
     "cy:run:edge": "yarn run cy:run --browser edge",
-    "cy:clean": "rm -rf cypress/screenshots",
-    "release": "shipjs prepare"
+    "cy:run:firefox": "yarn run cy:run --browser firefox",
+    "cy:run": "start-server-and-test doc:test http://localhost:3000 cy:record",
+    "cy:verify": "cypress verify",
+    "lint:css": "stylelint **/src/**/*.css",
+    "lint": "eslint --ext .js,.ts,.tsx .",
+    "prepare": "lerna run prepare",
+    "release": "shipjs prepare",
+    "start": "yarn run watch",
+    "test:size": "bundlesize",
+    "test": "jest",
+    "type-check": "tsc --noEmit",
+    "watch": "lerna run watch --parallel --scope @docsearch/*"
   },
   "devDependencies": {
     "@babel/cli": "7.11.5",
