--- a/packages/docsearch-css/package.json
+++ b/packages/docsearch-css/package.json
@@ -17,9 +17,10 @@
   "unpkg": "dist/style.css",
   "jsdelivr": "dist/style.css",
   "scripts": {
-    "build": "yarn build:clean && mkdir dist && yarn build:css",
-    "build:css": "node build-css.js",
     "build:clean": "rm -rf ./dist",
+    "build:css": "node build-css.js",
+    "build": "yarn build:clean && mkdir dist && yarn build:css",
+    "prepare": "yarn build",
     "watch": "watch \"yarn build:css\" --ignoreDirectoryPattern \"/dist/\""
   }
 }
