chore: update type checking script

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,7 +63,7 @@ jobs:
           command: yarn run lint
       - run:
           name: Type Checking
-          command: yarn run type-check
+          command: yarn run test:types
 
   test_unit:
     <<: *defaults
