--- a/packages/docsearch-css/package.json
+++ b/packages/docsearch-css/package.json
@@ -3,7 +3,7 @@
   "description": "Styles for DocSearch.",
   "version": "1.0.0-alpha.28",
   "license": "MIT",
-  "homepage": "https://github.com/francoischalifour/autocomplete.js",
+  "homepage": "https://docsearch.algolia.com",
   "repository": "algolia/docsearch",
   "author": {
     "name": "Algolia, Inc.",
