--- a/packages/docsearch-css/package.json
+++ b/packages/docsearch-css/package.json
@@ -17,7 +17,7 @@
   "unpkg": "dist/style.css",
   "jsdelivr": "dist/style.css",
   "scripts": {
-    "build:clean": "rm -rf ./dist",
+    "build:clean": "rimraf ./dist",
     "build:css": "node build-css.js",
     "build": "yarn build:clean && mkdir dist && yarn build:css",
     "prepare": "yarn build",
