--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "babel-plugin-module-resolver": "4.0.0",
     "bundlesize": "0.18.0",
     "concurrently": "5.3.0",
-    "cross-env": "^7.0.2",
+    "cross-env": "7.0.2",
     "cssnano": "4.1.10",
     "cypress": "4.8.0",
     "dotenv": "8.2.0",
@@ -72,7 +72,7 @@
     "prettier": "2.1.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "rimraf": "^3.0.2",
+    "rimraf": "3.0.2",
     "rollup": "1.31.0",
     "rollup-plugin-babel": "4.4.0",
     "rollup-plugin-commonjs": "10.1.0",
