feat: push keyboard buttons till client (#983)
This fixes a UI flash issue on Windows where the <kbd>⌘</kbd> key shows up right before <kbd>Ctrl</kbd> when using SSG (like Docusaurus).

This happened because in these scenarii, the site is generated on a server, and we can't know yet what will the user's OS be.

Closes facebook/docusaurus#3682.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build:types": "lerna run build:types --scope @docsearch/*",
     "build:umd": "lerna run build:umd --scope @docsearch/*",
     "build": "lerna run build --scope @docsearch/*",
-    "cy:clean": "rm -rf cypress/screenshots",
+    "cy:clean": "rimraf cypress/screenshots",
     "cy:info": "cypress info",
     "cy:record": "percy exec -- cypress run --spec 'cypress/integration/**/*' --headless --record",
     "cy:run:chrome": "yarn run cy:run --browser chrome",
@@ -51,6 +51,7 @@
     "babel-plugin-module-resolver": "4.0.0",
     "bundlesize": "0.18.0",
     "concurrently": "5.3.0",
+    "cross-env": "7.0.2",
     "cssnano": "4.1.10",
     "cypress": "4.8.0",
     "dotenv": "8.2.0",
@@ -71,6 +72,7 @@
     "prettier": "2.1.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "rimraf": "3.0.2",
     "rollup": "1.31.0",
     "rollup-plugin-babel": "4.4.0",
     "rollup-plugin-commonjs": "10.1.0",
