--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "@testing-library/dom": "7.23.0",
     "@testing-library/jest-dom": "5.11.4",
     "@testing-library/user-event": "12.1.3",
+    "@types/jest": "^26.0.14",
+    "@types/jest-diff": "^24.3.0",
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
     "@typescript-eslint/eslint-plugin": "2.19.0",
@@ -89,7 +91,7 @@
     "stylelint-no-unsupported-browser-features": "4.0.0",
     "stylelint-order": "4.1.0",
     "stylelint-prettier": "1.1.2",
-    "typescript": "3.7.5",
+    "typescript": "4.1.2",
     "watch": "1.0.2",
     "webpack": "4.44.1"
   }
