--- a/packages/docsearch-js/tsconfig.declaration.json
+++ b/packages/docsearch-js/tsconfig.declaration.json
@@ -1,8 +1,3 @@
 {
-  "extends": "./tsconfig",
-  "compilerOptions": {
-    "noEmit": false,
-    "declaration": true,
-    "emitDeclarationOnly": true
-  }
+  "extends": "../../tsconfig.declaration"
 }
