chore(react): update React peer dependencies

--- a/packages/docsearch-react/package.json
+++ b/packages/docsearch-react/package.json
@@ -40,7 +40,7 @@
     "algoliasearch": "^4.8.0"
   },
   "peerDependencies": {
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0"
+    "react": ">= 16.8.0 < 18.0.0",
+    "react-dom": ">= 16.8.0 < 18.0.0"
   }
 }
