--- a/packages/docsearch-react/package.json
+++ b/packages/docsearch-react/package.json
@@ -34,13 +34,14 @@
     "watch": "watch \"yarn on:change\" --ignoreDirectoryPattern \"/dist/\""
   },
   "dependencies": {
-    "@docsearch/css": "^1.0.0-alpha.28",
     "@algolia/autocomplete-core": "^1.0.0-alpha.35",
     "@algolia/autocomplete-preset-algolia": "^1.0.0-alpha.35",
+    "@docsearch/css": "^1.0.0-alpha.28",
     "algoliasearch": "^4.8.0"
   },
   "peerDependencies": {
     "react": ">= 16.8.0 < 18.0.0",
-    "react-dom": ">= 16.8.0 < 18.0.0"
+    "react-dom": ">= 16.8.0 < 18.0.0",
+    "@types/react": ">= 16.8.0 < 18.0.0"
   }
 }
