fix(docs): Adding Yarn resolution to lower terser-webpack-plugin

--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -47,5 +47,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  {
+    "resolutions": {
+      "**/terser-webpack-plugin": "^1.4.3"
+    }
   }
 }
